{
  "version": 4,
  "terraform_version": "1.11.1",
  "serial": 41,
  "lineage": "a70b673a-20f0-14f4-351e-8d62a810d26c",
  "resources": [
    {
      "module": "module.application",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:767397681234:listener/app/alb1/01e65e58e2e91e1b/b7e7927b9cfe8490",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:767397681234:targetgroup/tf-20250306104632617600000008/a493ebd8ec3ed875",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:767397681234:listener/app/alb1/01e65e58e2e91e1b/b7e7927b9cfe8490",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:767397681234:loadbalancer/app/alb1/01e65e58e2e91e1b",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_key_pair.udemy-keypair",
            "module.application.aws_alb_target_group.webserver",
            "module.application.aws_lb.alb1",
            "module.network.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.network.module.vpc.aws_customer_gateway.this",
            "module.network.module.vpc.aws_db_subnet_group.database",
            "module.network.module.vpc.aws_default_network_acl.this",
            "module.network.module.vpc.aws_default_route_table.default",
            "module.network.module.vpc.aws_default_security_group.this",
            "module.network.module.vpc.aws_default_vpc.this",
            "module.network.module.vpc.aws_egress_only_internet_gateway.this",
            "module.network.module.vpc.aws_eip.nat",
            "module.network.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.network.module.vpc.aws_flow_log.this",
            "module.network.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_nat_gateway.this",
            "module.network.module.vpc.aws_network_acl.database",
            "module.network.module.vpc.aws_network_acl.elasticache",
            "module.network.module.vpc.aws_network_acl.intra",
            "module.network.module.vpc.aws_network_acl.outpost",
            "module.network.module.vpc.aws_network_acl.private",
            "module.network.module.vpc.aws_network_acl.public",
            "module.network.module.vpc.aws_network_acl.redshift",
            "module.network.module.vpc.aws_network_acl_rule.database_inbound",
            "module.network.module.vpc.aws_network_acl_rule.database_outbound",
            "module.network.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.network.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.network.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.network.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.network.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.network.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.network.module.vpc.aws_network_acl_rule.private_inbound",
            "module.network.module.vpc.aws_network_acl_rule.private_outbound",
            "module.network.module.vpc.aws_network_acl_rule.public_inbound",
            "module.network.module.vpc.aws_network_acl_rule.public_outbound",
            "module.network.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.network.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.network.module.vpc.aws_redshift_subnet_group.redshift",
            "module.network.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.network.module.vpc.aws_route.database_internet_gateway",
            "module.network.module.vpc.aws_route.database_ipv6_egress",
            "module.network.module.vpc.aws_route.database_nat_gateway",
            "module.network.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.network.module.vpc.aws_route.private_ipv6_egress",
            "module.network.module.vpc.aws_route.private_nat_gateway",
            "module.network.module.vpc.aws_route.public_internet_gateway",
            "module.network.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.network.module.vpc.aws_route_table.database",
            "module.network.module.vpc.aws_route_table.elasticache",
            "module.network.module.vpc.aws_route_table.intra",
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_route_table.public",
            "module.network.module.vpc.aws_route_table.redshift",
            "module.network.module.vpc.aws_route_table_association.database",
            "module.network.module.vpc.aws_route_table_association.elasticache",
            "module.network.module.vpc.aws_route_table_association.intra",
            "module.network.module.vpc.aws_route_table_association.outpost",
            "module.network.module.vpc.aws_route_table_association.private",
            "module.network.module.vpc.aws_route_table_association.public",
            "module.network.module.vpc.aws_route_table_association.redshift",
            "module.network.module.vpc.aws_route_table_association.redshift_public",
            "module.network.module.vpc.aws_subnet.database",
            "module.network.module.vpc.aws_subnet.elasticache",
            "module.network.module.vpc.aws_subnet.intra",
            "module.network.module.vpc.aws_subnet.outpost",
            "module.network.module.vpc.aws_subnet.private",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_subnet.redshift",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_dhcp_options.this",
            "module.network.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.network.module.vpc.aws_vpn_gateway.this",
            "module.network.module.vpc.aws_vpn_gateway_attachment.this",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.network.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.network.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.security.aws_security_group.alb",
            "module.security.aws_security_group.application",
            "module.security.aws_security_group.bastion",
            "module.security.aws_security_group.mongodb",
            "module.storage.aws_instance.mongo"
          ]
        }
      ]
    },
    {
      "module": "module.application",
      "mode": "managed",
      "type": "aws_alb_listener_rule",
      "name": "api_rule1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:767397681234:targetgroup/tf-20250306104632617600000009/9295f95aa6e4c47c",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:767397681234:listener-rule/app/alb1/01e65e58e2e91e1b/b7e7927b9cfe8490/9e4c6d3f725be2f9",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/languages",
                      "/languages/*",
                      "/languages/*/*",
                      "/ok"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:767397681234:listener-rule/app/alb1/01e65e58e2e91e1b/b7e7927b9cfe8490/9e4c6d3f725be2f9",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:767397681234:listener/app/alb1/01e65e58e2e91e1b/b7e7927b9cfe8490",
            "priority": 10,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_key_pair.udemy-keypair",
            "module.application.aws_alb_listener.front_end",
            "module.application.aws_alb_target_group.api",
            "module.application.aws_alb_target_group.webserver",
            "module.application.aws_lb.alb1",
            "module.network.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.network.module.vpc.aws_customer_gateway.this",
            "module.network.module.vpc.aws_db_subnet_group.database",
            "module.network.module.vpc.aws_default_network_acl.this",
            "module.network.module.vpc.aws_default_route_table.default",
            "module.network.module.vpc.aws_default_security_group.this",
            "module.network.module.vpc.aws_default_vpc.this",
            "module.network.module.vpc.aws_egress_only_internet_gateway.this",
            "module.network.module.vpc.aws_eip.nat",
            "module.network.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.network.module.vpc.aws_flow_log.this",
            "module.network.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_nat_gateway.this",
            "module.network.module.vpc.aws_network_acl.database",
            "module.network.module.vpc.aws_network_acl.elasticache",
            "module.network.module.vpc.aws_network_acl.intra",
            "module.network.module.vpc.aws_network_acl.outpost",
            "module.network.module.vpc.aws_network_acl.private",
            "module.network.module.vpc.aws_network_acl.public",
            "module.network.module.vpc.aws_network_acl.redshift",
            "module.network.module.vpc.aws_network_acl_rule.database_inbound",
            "module.network.module.vpc.aws_network_acl_rule.database_outbound",
            "module.network.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.network.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.network.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.network.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.network.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.network.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.network.module.vpc.aws_network_acl_rule.private_inbound",
            "module.network.module.vpc.aws_network_acl_rule.private_outbound",
            "module.network.module.vpc.aws_network_acl_rule.public_inbound",
            "module.network.module.vpc.aws_network_acl_rule.public_outbound",
            "module.network.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.network.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.network.module.vpc.aws_redshift_subnet_group.redshift",
            "module.network.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.network.module.vpc.aws_route.database_internet_gateway",
            "module.network.module.vpc.aws_route.database_ipv6_egress",
            "module.network.module.vpc.aws_route.database_nat_gateway",
            "module.network.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.network.module.vpc.aws_route.private_ipv6_egress",
            "module.network.module.vpc.aws_route.private_nat_gateway",
            "module.network.module.vpc.aws_route.public_internet_gateway",
            "module.network.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.network.module.vpc.aws_route_table.database",
            "module.network.module.vpc.aws_route_table.elasticache",
            "module.network.module.vpc.aws_route_table.intra",
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_route_table.public",
            "module.network.module.vpc.aws_route_table.redshift",
            "module.network.module.vpc.aws_route_table_association.database",
            "module.network.module.vpc.aws_route_table_association.elasticache",
            "module.network.module.vpc.aws_route_table_association.intra",
            "module.network.module.vpc.aws_route_table_association.outpost",
            "module.network.module.vpc.aws_route_table_association.private",
            "module.network.module.vpc.aws_route_table_association.public",
            "module.network.module.vpc.aws_route_table_association.redshift",
            "module.network.module.vpc.aws_route_table_association.redshift_public",
            "module.network.module.vpc.aws_subnet.database",
            "module.network.module.vpc.aws_subnet.elasticache",
            "module.network.module.vpc.aws_subnet.intra",
            "module.network.module.vpc.aws_subnet.outpost",
            "module.network.module.vpc.aws_subnet.private",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_subnet.redshift",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_dhcp_options.this",
            "module.network.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.network.module.vpc.aws_vpn_gateway.this",
            "module.network.module.vpc.aws_vpn_gateway_attachment.this",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.network.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.network.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.security.aws_security_group.alb",
            "module.security.aws_security_group.application",
            "module.security.aws_security_group.bastion",
            "module.security.aws_security_group.mongodb",
            "module.storage.aws_instance.mongo"
          ]
        }
      ]
    },
    {
      "module": "module.application",
      "mode": "managed",
      "type": "aws_alb_listener_rule",
      "name": "frontend_rule1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:767397681234:targetgroup/tf-20250306104632617600000008/a493ebd8ec3ed875",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:767397681234:listener-rule/app/alb1/01e65e58e2e91e1b/b7e7927b9cfe8490/de8d8683e394c977",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:767397681234:listener-rule/app/alb1/01e65e58e2e91e1b/b7e7927b9cfe8490/de8d8683e394c977",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:767397681234:listener/app/alb1/01e65e58e2e91e1b/b7e7927b9cfe8490",
            "priority": 100,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_key_pair.udemy-keypair",
            "module.application.aws_alb_listener.front_end",
            "module.application.aws_alb_target_group.webserver",
            "module.application.aws_lb.alb1",
            "module.network.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.network.module.vpc.aws_customer_gateway.this",
            "module.network.module.vpc.aws_db_subnet_group.database",
            "module.network.module.vpc.aws_default_network_acl.this",
            "module.network.module.vpc.aws_default_route_table.default",
            "module.network.module.vpc.aws_default_security_group.this",
            "module.network.module.vpc.aws_default_vpc.this",
            "module.network.module.vpc.aws_egress_only_internet_gateway.this",
            "module.network.module.vpc.aws_eip.nat",
            "module.network.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.network.module.vpc.aws_flow_log.this",
            "module.network.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_nat_gateway.this",
            "module.network.module.vpc.aws_network_acl.database",
            "module.network.module.vpc.aws_network_acl.elasticache",
            "module.network.module.vpc.aws_network_acl.intra",
            "module.network.module.vpc.aws_network_acl.outpost",
            "module.network.module.vpc.aws_network_acl.private",
            "module.network.module.vpc.aws_network_acl.public",
            "module.network.module.vpc.aws_network_acl.redshift",
            "module.network.module.vpc.aws_network_acl_rule.database_inbound",
            "module.network.module.vpc.aws_network_acl_rule.database_outbound",
            "module.network.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.network.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.network.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.network.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.network.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.network.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.network.module.vpc.aws_network_acl_rule.private_inbound",
            "module.network.module.vpc.aws_network_acl_rule.private_outbound",
            "module.network.module.vpc.aws_network_acl_rule.public_inbound",
            "module.network.module.vpc.aws_network_acl_rule.public_outbound",
            "module.network.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.network.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.network.module.vpc.aws_redshift_subnet_group.redshift",
            "module.network.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.network.module.vpc.aws_route.database_internet_gateway",
            "module.network.module.vpc.aws_route.database_ipv6_egress",
            "module.network.module.vpc.aws_route.database_nat_gateway",
            "module.network.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.network.module.vpc.aws_route.private_ipv6_egress",
            "module.network.module.vpc.aws_route.private_nat_gateway",
            "module.network.module.vpc.aws_route.public_internet_gateway",
            "module.network.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.network.module.vpc.aws_route_table.database",
            "module.network.module.vpc.aws_route_table.elasticache",
            "module.network.module.vpc.aws_route_table.intra",
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_route_table.public",
            "module.network.module.vpc.aws_route_table.redshift",
            "module.network.module.vpc.aws_route_table_association.database",
            "module.network.module.vpc.aws_route_table_association.elasticache",
            "module.network.module.vpc.aws_route_table_association.intra",
            "module.network.module.vpc.aws_route_table_association.outpost",
            "module.network.module.vpc.aws_route_table_association.private",
            "module.network.module.vpc.aws_route_table_association.public",
            "module.network.module.vpc.aws_route_table_association.redshift",
            "module.network.module.vpc.aws_route_table_association.redshift_public",
            "module.network.module.vpc.aws_subnet.database",
            "module.network.module.vpc.aws_subnet.elasticache",
            "module.network.module.vpc.aws_subnet.intra",
            "module.network.module.vpc.aws_subnet.outpost",
            "module.network.module.vpc.aws_subnet.private",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_subnet.redshift",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_dhcp_options.this",
            "module.network.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.network.module.vpc.aws_vpn_gateway.this",
            "module.network.module.vpc.aws_vpn_gateway_attachment.this",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.network.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.network.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.security.aws_security_group.alb",
            "module.security.aws_security_group.application",
            "module.security.aws_security_group.bastion",
            "module.security.aws_security_group.mongodb",
            "module.storage.aws_instance.mongo"
          ]
        }
      ]
    },
    {
      "module": "module.application",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:767397681234:targetgroup/tf-20250306104632617600000009/9295f95aa6e4c47c",
            "arn_suffix": "targetgroup/tf-20250306104632617600000009/9295f95aa6e4c47c",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/ok",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 6
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:767397681234:targetgroup/tf-20250306104632617600000009/9295f95aa6e4c47c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-20250306104632617600000009",
            "name_prefix": "tf-",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e5ad762de4c9bdb8"
          },
          "dependencies": [
            "aws_key_pair.udemy-keypair",
            "module.network.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.network.module.vpc.aws_customer_gateway.this",
            "module.network.module.vpc.aws_db_subnet_group.database",
            "module.network.module.vpc.aws_default_network_acl.this",
            "module.network.module.vpc.aws_default_route_table.default",
            "module.network.module.vpc.aws_default_security_group.this",
            "module.network.module.vpc.aws_default_vpc.this",
            "module.network.module.vpc.aws_egress_only_internet_gateway.this",
            "module.network.module.vpc.aws_eip.nat",
            "module.network.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.network.module.vpc.aws_flow_log.this",
            "module.network.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_nat_gateway.this",
            "module.network.module.vpc.aws_network_acl.database",
            "module.network.module.vpc.aws_network_acl.elasticache",
            "module.network.module.vpc.aws_network_acl.intra",
            "module.network.module.vpc.aws_network_acl.outpost",
            "module.network.module.vpc.aws_network_acl.private",
            "module.network.module.vpc.aws_network_acl.public",
            "module.network.module.vpc.aws_network_acl.redshift",
            "module.network.module.vpc.aws_network_acl_rule.database_inbound",
            "module.network.module.vpc.aws_network_acl_rule.database_outbound",
            "module.network.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.network.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.network.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.network.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.network.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.network.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.network.module.vpc.aws_network_acl_rule.private_inbound",
            "module.network.module.vpc.aws_network_acl_rule.private_outbound",
            "module.network.module.vpc.aws_network_acl_rule.public_inbound",
            "module.network.module.vpc.aws_network_acl_rule.public_outbound",
            "module.network.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.network.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.network.module.vpc.aws_redshift_subnet_group.redshift",
            "module.network.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.network.module.vpc.aws_route.database_internet_gateway",
            "module.network.module.vpc.aws_route.database_ipv6_egress",
            "module.network.module.vpc.aws_route.database_nat_gateway",
            "module.network.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.network.module.vpc.aws_route.private_ipv6_egress",
            "module.network.module.vpc.aws_route.private_nat_gateway",
            "module.network.module.vpc.aws_route.public_internet_gateway",
            "module.network.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.network.module.vpc.aws_route_table.database",
            "module.network.module.vpc.aws_route_table.elasticache",
            "module.network.module.vpc.aws_route_table.intra",
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_route_table.public",
            "module.network.module.vpc.aws_route_table.redshift",
            "module.network.module.vpc.aws_route_table_association.database",
            "module.network.module.vpc.aws_route_table_association.elasticache",
            "module.network.module.vpc.aws_route_table_association.intra",
            "module.network.module.vpc.aws_route_table_association.outpost",
            "module.network.module.vpc.aws_route_table_association.private",
            "module.network.module.vpc.aws_route_table_association.public",
            "module.network.module.vpc.aws_route_table_association.redshift",
            "module.network.module.vpc.aws_route_table_association.redshift_public",
            "module.network.module.vpc.aws_subnet.database",
            "module.network.module.vpc.aws_subnet.elasticache",
            "module.network.module.vpc.aws_subnet.intra",
            "module.network.module.vpc.aws_subnet.outpost",
            "module.network.module.vpc.aws_subnet.private",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_subnet.redshift",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_dhcp_options.this",
            "module.network.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.network.module.vpc.aws_vpn_gateway.this",
            "module.network.module.vpc.aws_vpn_gateway_attachment.this",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.network.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.network.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.security.aws_security_group.alb",
            "module.security.aws_security_group.application",
            "module.security.aws_security_group.bastion",
            "module.security.aws_security_group.mongodb",
            "module.storage.aws_instance.mongo"
          ]
        }
      ]
    },
    {
      "module": "module.application",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:767397681234:targetgroup/tf-20250306104632617600000008/a493ebd8ec3ed875",
            "arn_suffix": "targetgroup/tf-20250306104632617600000008/a493ebd8ec3ed875",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 6
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:767397681234:targetgroup/tf-20250306104632617600000008/a493ebd8ec3ed875",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-20250306104632617600000008",
            "name_prefix": "tf-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e5ad762de4c9bdb8"
          },
          "dependencies": [
            "aws_key_pair.udemy-keypair",
            "module.network.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.network.module.vpc.aws_customer_gateway.this",
            "module.network.module.vpc.aws_db_subnet_group.database",
            "module.network.module.vpc.aws_default_network_acl.this",
            "module.network.module.vpc.aws_default_route_table.default",
            "module.network.module.vpc.aws_default_security_group.this",
            "module.network.module.vpc.aws_default_vpc.this",
            "module.network.module.vpc.aws_egress_only_internet_gateway.this",
            "module.network.module.vpc.aws_eip.nat",
            "module.network.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.network.module.vpc.aws_flow_log.this",
            "module.network.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_nat_gateway.this",
            "module.network.module.vpc.aws_network_acl.database",
            "module.network.module.vpc.aws_network_acl.elasticache",
            "module.network.module.vpc.aws_network_acl.intra",
            "module.network.module.vpc.aws_network_acl.outpost",
            "module.network.module.vpc.aws_network_acl.private",
            "module.network.module.vpc.aws_network_acl.public",
            "module.network.module.vpc.aws_network_acl.redshift",
            "module.network.module.vpc.aws_network_acl_rule.database_inbound",
            "module.network.module.vpc.aws_network_acl_rule.database_outbound",
            "module.network.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.network.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.network.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.network.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.network.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.network.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.network.module.vpc.aws_network_acl_rule.private_inbound",
            "module.network.module.vpc.aws_network_acl_rule.private_outbound",
            "module.network.module.vpc.aws_network_acl_rule.public_inbound",
            "module.network.module.vpc.aws_network_acl_rule.public_outbound",
            "module.network.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.network.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.network.module.vpc.aws_redshift_subnet_group.redshift",
            "module.network.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.network.module.vpc.aws_route.database_internet_gateway",
            "module.network.module.vpc.aws_route.database_ipv6_egress",
            "module.network.module.vpc.aws_route.database_nat_gateway",
            "module.network.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.network.module.vpc.aws_route.private_ipv6_egress",
            "module.network.module.vpc.aws_route.private_nat_gateway",
            "module.network.module.vpc.aws_route.public_internet_gateway",
            "module.network.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.network.module.vpc.aws_route_table.database",
            "module.network.module.vpc.aws_route_table.elasticache",
            "module.network.module.vpc.aws_route_table.intra",
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_route_table.public",
            "module.network.module.vpc.aws_route_table.redshift",
            "module.network.module.vpc.aws_route_table_association.database",
            "module.network.module.vpc.aws_route_table_association.elasticache",
            "module.network.module.vpc.aws_route_table_association.intra",
            "module.network.module.vpc.aws_route_table_association.outpost",
            "module.network.module.vpc.aws_route_table_association.private",
            "module.network.module.vpc.aws_route_table_association.public",
            "module.network.module.vpc.aws_route_table_association.redshift",
            "module.network.module.vpc.aws_route_table_association.redshift_public",
            "module.network.module.vpc.aws_subnet.database",
            "module.network.module.vpc.aws_subnet.elasticache",
            "module.network.module.vpc.aws_subnet.intra",
            "module.network.module.vpc.aws_subnet.outpost",
            "module.network.module.vpc.aws_subnet.private",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_subnet.redshift",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_dhcp_options.this",
            "module.network.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.network.module.vpc.aws_vpn_gateway.this",
            "module.network.module.vpc.aws_vpn_gateway_attachment.this",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.network.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.network.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.security.aws_security_group.alb",
            "module.security.aws_security_group.application",
            "module.security.aws_security_group.bastion",
            "module.security.aws_security_group.mongodb",
            "module.storage.aws_instance.mongo"
          ]
        }
      ]
    },
    {
      "module": "module.application",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:767397681234:loadbalancer/app/alb1/01e65e58e2e91e1b",
            "arn_suffix": "app/alb1/01e65e58e2e91e1b",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb1-482564190.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": true,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:767397681234:loadbalancer/app/alb1/01e65e58e2e91e1b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb1",
            "preserve_host_header": false,
            "security_groups": [
              "sg-090125d06c353af76"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07ebf19db4df96a54"
              },
              {
                "subnet_id": "subnet-0b507393f859bfe6e"
              }
            ],
            "subnets": [
              "subnet-07ebf19db4df96a54",
              "subnet-0b507393f859bfe6e"
            ],
            "tags": {
              "Environment": "Prod"
            },
            "tags_all": {
              "Environment": "Prod"
            },
            "vpc_id": "vpc-0e5ad762de4c9bdb8",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "aws_key_pair.udemy-keypair",
            "module.network.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.network.module.vpc.aws_customer_gateway.this",
            "module.network.module.vpc.aws_db_subnet_group.database",
            "module.network.module.vpc.aws_default_network_acl.this",
            "module.network.module.vpc.aws_default_route_table.default",
            "module.network.module.vpc.aws_default_security_group.this",
            "module.network.module.vpc.aws_default_vpc.this",
            "module.network.module.vpc.aws_egress_only_internet_gateway.this",
            "module.network.module.vpc.aws_eip.nat",
            "module.network.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.network.module.vpc.aws_flow_log.this",
            "module.network.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_nat_gateway.this",
            "module.network.module.vpc.aws_network_acl.database",
            "module.network.module.vpc.aws_network_acl.elasticache",
            "module.network.module.vpc.aws_network_acl.intra",
            "module.network.module.vpc.aws_network_acl.outpost",
            "module.network.module.vpc.aws_network_acl.private",
            "module.network.module.vpc.aws_network_acl.public",
            "module.network.module.vpc.aws_network_acl.redshift",
            "module.network.module.vpc.aws_network_acl_rule.database_inbound",
            "module.network.module.vpc.aws_network_acl_rule.database_outbound",
            "module.network.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.network.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.network.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.network.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.network.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.network.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.network.module.vpc.aws_network_acl_rule.private_inbound",
            "module.network.module.vpc.aws_network_acl_rule.private_outbound",
            "module.network.module.vpc.aws_network_acl_rule.public_inbound",
            "module.network.module.vpc.aws_network_acl_rule.public_outbound",
            "module.network.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.network.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.network.module.vpc.aws_redshift_subnet_group.redshift",
            "module.network.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.network.module.vpc.aws_route.database_internet_gateway",
            "module.network.module.vpc.aws_route.database_ipv6_egress",
            "module.network.module.vpc.aws_route.database_nat_gateway",
            "module.network.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.network.module.vpc.aws_route.private_ipv6_egress",
            "module.network.module.vpc.aws_route.private_nat_gateway",
            "module.network.module.vpc.aws_route.public_internet_gateway",
            "module.network.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.network.module.vpc.aws_route_table.database",
            "module.network.module.vpc.aws_route_table.elasticache",
            "module.network.module.vpc.aws_route_table.intra",
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_route_table.public",
            "module.network.module.vpc.aws_route_table.redshift",
            "module.network.module.vpc.aws_route_table_association.database",
            "module.network.module.vpc.aws_route_table_association.elasticache",
            "module.network.module.vpc.aws_route_table_association.intra",
            "module.network.module.vpc.aws_route_table_association.outpost",
            "module.network.module.vpc.aws_route_table_association.private",
            "module.network.module.vpc.aws_route_table_association.public",
            "module.network.module.vpc.aws_route_table_association.redshift",
            "module.network.module.vpc.aws_route_table_association.redshift_public",
            "module.network.module.vpc.aws_subnet.database",
            "module.network.module.vpc.aws_subnet.elasticache",
            "module.network.module.vpc.aws_subnet.intra",
            "module.network.module.vpc.aws_subnet.outpost",
            "module.network.module.vpc.aws_subnet.private",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_subnet.redshift",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_dhcp_options.this",
            "module.network.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.network.module.vpc.aws_vpn_gateway.this",
            "module.network.module.vpc.aws_vpn_gateway_attachment.this",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.network.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.network.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.security.aws_security_group.alb",
            "module.security.aws_security_group.application",
            "module.security.aws_security_group.bastion",
            "module.security.aws_security_group.mongodb",
            "module.storage.aws_instance.mongo"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fa377108253bf620",
            "arn": "arn:aws:ec2:ap-southeast-1:767397681234:instance/i-0b7432c352601dd1f",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b7432c352601dd1f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "udemy-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b7809c6c1f51ba31",
            "private_dns": "ip-10-10-1-226.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.1.226",
            "public_dns": "ec2-47-128-13-82.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "47.128.13.82",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:ap-southeast-1:767397681234:key/e9e86ccc-a45a-4931-a6aa-71b2ece9b9d6",
                "throughput": 0,
                "volume_id": "vol-0686b4f02ecb63c6f",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b507393f859bfe6e",
            "tags": {
              "Name": "Bastion",
              "Owner": "Udemy"
            },
            "tags_all": {
              "Name": "Bastion",
              "Owner": "Udemy"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c120d53caaf8fe65"
            ]
          },
          "dependencies": [
            "aws_key_pair.udemy-keypair",
            "module.network.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.network.module.vpc.aws_customer_gateway.this",
            "module.network.module.vpc.aws_db_subnet_group.database",
            "module.network.module.vpc.aws_default_network_acl.this",
            "module.network.module.vpc.aws_default_route_table.default",
            "module.network.module.vpc.aws_default_security_group.this",
            "module.network.module.vpc.aws_default_vpc.this",
            "module.network.module.vpc.aws_egress_only_internet_gateway.this",
            "module.network.module.vpc.aws_eip.nat",
            "module.network.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.network.module.vpc.aws_flow_log.this",
            "module.network.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_nat_gateway.this",
            "module.network.module.vpc.aws_network_acl.database",
            "module.network.module.vpc.aws_network_acl.elasticache",
            "module.network.module.vpc.aws_network_acl.intra",
            "module.network.module.vpc.aws_network_acl.outpost",
            "module.network.module.vpc.aws_network_acl.private",
            "module.network.module.vpc.aws_network_acl.public",
            "module.network.module.vpc.aws_network_acl.redshift",
            "module.network.module.vpc.aws_network_acl_rule.database_inbound",
            "module.network.module.vpc.aws_network_acl_rule.database_outbound",
            "module.network.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.network.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.network.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.network.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.network.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.network.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.network.module.vpc.aws_network_acl_rule.private_inbound",
            "module.network.module.vpc.aws_network_acl_rule.private_outbound",
            "module.network.module.vpc.aws_network_acl_rule.public_inbound",
            "module.network.module.vpc.aws_network_acl_rule.public_outbound",
            "module.network.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.network.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.network.module.vpc.aws_redshift_subnet_group.redshift",
            "module.network.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.network.module.vpc.aws_route.database_internet_gateway",
            "module.network.module.vpc.aws_route.database_ipv6_egress",
            "module.network.module.vpc.aws_route.database_nat_gateway",
            "module.network.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.network.module.vpc.aws_route.private_ipv6_egress",
            "module.network.module.vpc.aws_route.private_nat_gateway",
            "module.network.module.vpc.aws_route.public_internet_gateway",
            "module.network.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.network.module.vpc.aws_route_table.database",
            "module.network.module.vpc.aws_route_table.elasticache",
            "module.network.module.vpc.aws_route_table.intra",
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_route_table.public",
            "module.network.module.vpc.aws_route_table.redshift",
            "module.network.module.vpc.aws_route_table_association.database",
            "module.network.module.vpc.aws_route_table_association.elasticache",
            "module.network.module.vpc.aws_route_table_association.intra",
            "module.network.module.vpc.aws_route_table_association.outpost",
            "module.network.module.vpc.aws_route_table_association.private",
            "module.network.module.vpc.aws_route_table_association.public",
            "module.network.module.vpc.aws_route_table_association.redshift",
            "module.network.module.vpc.aws_route_table_association.redshift_public",
            "module.network.module.vpc.aws_subnet.database",
            "module.network.module.vpc.aws_subnet.elasticache",
            "module.network.module.vpc.aws_subnet.intra",
            "module.network.module.vpc.aws_subnet.outpost",
            "module.network.module.vpc.aws_subnet.private",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_subnet.redshift",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_dhcp_options.this",
            "module.network.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.network.module.vpc.aws_vpn_gateway.this",
            "module.network.module.vpc.aws_vpn_gateway_attachment.this",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.network.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.network.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.security.aws_security_group.alb",
            "module.security.aws_security_group.application",
            "module.security.aws_security_group.bastion",
            "module.security.aws_security_group.mongodb"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:767397681234:network-acl/acl-0a81ab4c1e822bb9a",
            "default_network_acl_id": "acl-0a81ab4c1e822bb9a",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0a81ab4c1e822bb9a",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "767397681234",
            "subnet_ids": [
              "subnet-06b4bf8cb5c1b0869",
              "subnet-07ebf19db4df96a54",
              "subnet-088e5aea997eedb85",
              "subnet-0b507393f859bfe6e"
            ],
            "tags": {
              "Demo": "Terraform",
              "Name": "Udemy"
            },
            "tags_all": {
              "Demo": "Terraform",
              "Name": "Udemy"
            },
            "vpc_id": "vpc-0e5ad762de4c9bdb8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:767397681234:route-table/rtb-0eeb5812b7d2be759",
            "default_route_table_id": "rtb-0eeb5812b7d2be759",
            "id": "rtb-0eeb5812b7d2be759",
            "owner_id": "767397681234",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Demo": "Terraform",
              "Name": "Udemy"
            },
            "tags_all": {
              "Demo": "Terraform",
              "Name": "Udemy"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0e5ad762de4c9bdb8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:767397681234:security-group/sg-0cbabdcb60129134c",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0cbabdcb60129134c",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "767397681234",
            "revoke_rules_on_delete": false,
            "tags": {
              "Demo": "Terraform",
              "Name": "Udemy"
            },
            "tags_all": {
              "Demo": "Terraform",
              "Name": "Udemy"
            },
            "vpc_id": "vpc-0e5ad762de4c9bdb8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a6ff0ee2c883582b",
            "arn": "arn:aws:ec2:ap-southeast-1:767397681234:elastic-ip/eipalloc-0a6ff0ee2c883582b",
            "domain": "vpc",
            "id": "eipalloc-0a6ff0ee2c883582b",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-3-1-17-181.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "3.1.17.181",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Demo": "Terraform",
              "Name": "Udemy"
            },
            "tags_all": {
              "Demo": "Terraform",
              "Name": "Udemy"
            },
            "vpc": true
          },
          "dependencies": [
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-055e2f565d47394c0",
            "arn": "arn:aws:ec2:ap-southeast-1:767397681234:elastic-ip/eipalloc-055e2f565d47394c0",
            "domain": "vpc",
            "id": "eipalloc-055e2f565d47394c0",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-18-140-213-95.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.140.213.95",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Demo": "Terraform",
              "Name": "Udemy"
            },
            "tags_all": {
              "Demo": "Terraform",
              "Name": "Udemy"
            },
            "vpc": true
          },
          "dependencies": [
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:767397681234:internet-gateway/igw-0a20239f2e5c13527",
            "id": "igw-0a20239f2e5c13527",
            "owner_id": "767397681234",
            "tags": {
              "Demo": "Terraform",
              "Name": "Udemy"
            },
            "tags_all": {
              "Demo": "Terraform",
              "Name": "Udemy"
            },
            "vpc_id": "vpc-0e5ad762de4c9bdb8"
          },
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a6ff0ee2c883582b",
            "association_id": "eipassoc-0a9da3e0d6b3039fa",
            "connectivity_type": "public",
            "id": "nat-04dc1f1baf7a84c30",
            "network_interface_id": "eni-0deac6e55045d85a9",
            "private_ip": "10.10.1.192",
            "public_ip": "3.1.17.181",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b507393f859bfe6e",
            "tags": {
              "Demo": "Terraform",
              "Name": "Udemy"
            },
            "tags_all": {
              "Demo": "Terraform",
              "Name": "Udemy"
            }
          },
          "dependencies": [
            "module.network.module.vpc.aws_eip.nat",
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-055e2f565d47394c0",
            "association_id": "eipassoc-0c086fde675e2e7d0",
            "connectivity_type": "public",
            "id": "nat-045ccea50cc63f360",
            "network_interface_id": "eni-017aa8db9bc721618",
            "private_ip": "10.10.2.45",
            "public_ip": "18.140.213.95",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07ebf19db4df96a54",
            "tags": {
              "Demo": "Terraform",
              "Name": "Udemy"
            },
            "tags_all": {
              "Demo": "Terraform",
              "Name": "Udemy"
            }
          },
          "dependencies": [
            "module.network.module.vpc.aws_eip.nat",
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07807cdd006aede291080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-04dc1f1baf7a84c30",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07807cdd006aede29",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_eip.nat",
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_nat_gateway.this",
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00ede8085f9c4adeb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-045ccea50cc63f360",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00ede8085f9c4adeb",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_eip.nat",
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_nat_gateway.this",
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a20239f2e5c13527",
            "id": "r-rtb-0736ddf9f8f4375551080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0736ddf9f8f437555",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_route_table.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:767397681234:route-table/rtb-07807cdd006aede29",
            "id": "rtb-07807cdd006aede29",
            "owner_id": "767397681234",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Demo": "Terraform",
              "Name": "Udemy"
            },
            "tags_all": {
              "Demo": "Terraform",
              "Name": "Udemy"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e5ad762de4c9bdb8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:767397681234:route-table/rtb-00ede8085f9c4adeb",
            "id": "rtb-00ede8085f9c4adeb",
            "owner_id": "767397681234",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Demo": "Terraform",
              "Name": "Udemy"
            },
            "tags_all": {
              "Demo": "Terraform",
              "Name": "Udemy"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e5ad762de4c9bdb8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:767397681234:route-table/rtb-0736ddf9f8f437555",
            "id": "rtb-0736ddf9f8f437555",
            "owner_id": "767397681234",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Demo": "Terraform",
              "Name": "Udemy"
            },
            "tags_all": {
              "Demo": "Terraform",
              "Name": "Udemy"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e5ad762de4c9bdb8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c5b1f0396623a9f0",
            "route_table_id": "rtb-07807cdd006aede29",
            "subnet_id": "subnet-06b4bf8cb5c1b0869"
          },
          "dependencies": [
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_subnet.private",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f1f1eac53beccd7",
            "route_table_id": "rtb-00ede8085f9c4adeb",
            "subnet_id": "subnet-088e5aea997eedb85"
          },
          "dependencies": [
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_subnet.private",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0967988dbafa83e9d",
            "route_table_id": "rtb-0736ddf9f8f437555",
            "subnet_id": "subnet-0b507393f859bfe6e"
          },
          "dependencies": [
            "module.network.module.vpc.aws_route_table.public",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-029e5742c64ad6493",
            "route_table_id": "rtb-0736ddf9f8f437555",
            "subnet_id": "subnet-07ebf19db4df96a54"
          },
          "dependencies": [
            "module.network.module.vpc.aws_route_table.public",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:767397681234:subnet/subnet-06b4bf8cb5c1b0869",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.10.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06b4bf8cb5c1b0869",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397681234",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Demo": "Terraform",
              "Name": "Udemy"
            },
            "tags_all": {
              "Demo": "Terraform",
              "Name": "Udemy"
            },
            "vpc_id": "vpc-0e5ad762de4c9bdb8"
          },
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:767397681234:subnet/subnet-088e5aea997eedb85",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.10.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-088e5aea997eedb85",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397681234",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Demo": "Terraform",
              "Name": "Udemy"
            },
            "tags_all": {
              "Demo": "Terraform",
              "Name": "Udemy"
            },
            "vpc_id": "vpc-0e5ad762de4c9bdb8"
          },
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:767397681234:subnet/subnet-0b507393f859bfe6e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b507393f859bfe6e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397681234",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Demo": "Terraform",
              "Name": "Udemy"
            },
            "tags_all": {
              "Demo": "Terraform",
              "Name": "Udemy"
            },
            "vpc_id": "vpc-0e5ad762de4c9bdb8"
          },
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:767397681234:subnet/subnet-07ebf19db4df96a54",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07ebf19db4df96a54",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397681234",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Demo": "Terraform",
              "Name": "Udemy"
            },
            "tags_all": {
              "Demo": "Terraform",
              "Name": "Udemy"
            },
            "vpc_id": "vpc-0e5ad762de4c9bdb8"
          },
          "dependencies": [
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:767397681234:vpc/vpc-0e5ad762de4c9bdb8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0a81ab4c1e822bb9a",
            "default_route_table_id": "rtb-0eeb5812b7d2be759",
            "default_security_group_id": "sg-0cbabdcb60129134c",
            "dhcp_options_id": "dopt-058045a1148dc7f0c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e5ad762de4c9bdb8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0eeb5812b7d2be759",
            "owner_id": "767397681234",
            "tags": {
              "Demo": "Terraform",
              "Name": "Udemy"
            },
            "tags_all": {
              "Demo": "Terraform",
              "Name": "Udemy"
            }
          }
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:767397681234:security-group/sg-090125d06c353af76",
            "description": "alb network traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "all all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-090125d06c353af76",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "80 from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb",
            "name_prefix": "",
            "owner_id": "767397681234",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow traffic"
            },
            "tags_all": {
              "Name": "allow traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e5ad762de4c9bdb8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.network.module.vpc.aws_customer_gateway.this",
            "module.network.module.vpc.aws_db_subnet_group.database",
            "module.network.module.vpc.aws_default_network_acl.this",
            "module.network.module.vpc.aws_default_route_table.default",
            "module.network.module.vpc.aws_default_security_group.this",
            "module.network.module.vpc.aws_default_vpc.this",
            "module.network.module.vpc.aws_egress_only_internet_gateway.this",
            "module.network.module.vpc.aws_eip.nat",
            "module.network.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.network.module.vpc.aws_flow_log.this",
            "module.network.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_nat_gateway.this",
            "module.network.module.vpc.aws_network_acl.database",
            "module.network.module.vpc.aws_network_acl.elasticache",
            "module.network.module.vpc.aws_network_acl.intra",
            "module.network.module.vpc.aws_network_acl.outpost",
            "module.network.module.vpc.aws_network_acl.private",
            "module.network.module.vpc.aws_network_acl.public",
            "module.network.module.vpc.aws_network_acl.redshift",
            "module.network.module.vpc.aws_network_acl_rule.database_inbound",
            "module.network.module.vpc.aws_network_acl_rule.database_outbound",
            "module.network.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.network.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.network.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.network.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.network.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.network.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.network.module.vpc.aws_network_acl_rule.private_inbound",
            "module.network.module.vpc.aws_network_acl_rule.private_outbound",
            "module.network.module.vpc.aws_network_acl_rule.public_inbound",
            "module.network.module.vpc.aws_network_acl_rule.public_outbound",
            "module.network.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.network.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.network.module.vpc.aws_redshift_subnet_group.redshift",
            "module.network.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.network.module.vpc.aws_route.database_internet_gateway",
            "module.network.module.vpc.aws_route.database_ipv6_egress",
            "module.network.module.vpc.aws_route.database_nat_gateway",
            "module.network.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.network.module.vpc.aws_route.private_ipv6_egress",
            "module.network.module.vpc.aws_route.private_nat_gateway",
            "module.network.module.vpc.aws_route.public_internet_gateway",
            "module.network.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.network.module.vpc.aws_route_table.database",
            "module.network.module.vpc.aws_route_table.elasticache",
            "module.network.module.vpc.aws_route_table.intra",
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_route_table.public",
            "module.network.module.vpc.aws_route_table.redshift",
            "module.network.module.vpc.aws_route_table_association.database",
            "module.network.module.vpc.aws_route_table_association.elasticache",
            "module.network.module.vpc.aws_route_table_association.intra",
            "module.network.module.vpc.aws_route_table_association.outpost",
            "module.network.module.vpc.aws_route_table_association.private",
            "module.network.module.vpc.aws_route_table_association.public",
            "module.network.module.vpc.aws_route_table_association.redshift",
            "module.network.module.vpc.aws_route_table_association.redshift_public",
            "module.network.module.vpc.aws_subnet.database",
            "module.network.module.vpc.aws_subnet.elasticache",
            "module.network.module.vpc.aws_subnet.intra",
            "module.network.module.vpc.aws_subnet.outpost",
            "module.network.module.vpc.aws_subnet.private",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_subnet.redshift",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_dhcp_options.this",
            "module.network.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.network.module.vpc.aws_vpn_gateway.this",
            "module.network.module.vpc.aws_vpn_gateway_attachment.this",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.network.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.network.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "application",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:767397681234:security-group/sg-01f1297157465bb22",
            "description": "application network traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "all all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01f1297157465bb22",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "22 from bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c120d53caaf8fe65"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "80 from alb",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-090125d06c353af76"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "80 from bastion",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c120d53caaf8fe65"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "8080 from alb",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-090125d06c353af76"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "8080 from bastion",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c120d53caaf8fe65"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "application",
            "name_prefix": "",
            "owner_id": "767397681234",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "application allow traffic"
            },
            "tags_all": {
              "Name": "application allow traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e5ad762de4c9bdb8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.network.module.vpc.aws_customer_gateway.this",
            "module.network.module.vpc.aws_db_subnet_group.database",
            "module.network.module.vpc.aws_default_network_acl.this",
            "module.network.module.vpc.aws_default_route_table.default",
            "module.network.module.vpc.aws_default_security_group.this",
            "module.network.module.vpc.aws_default_vpc.this",
            "module.network.module.vpc.aws_egress_only_internet_gateway.this",
            "module.network.module.vpc.aws_eip.nat",
            "module.network.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.network.module.vpc.aws_flow_log.this",
            "module.network.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_nat_gateway.this",
            "module.network.module.vpc.aws_network_acl.database",
            "module.network.module.vpc.aws_network_acl.elasticache",
            "module.network.module.vpc.aws_network_acl.intra",
            "module.network.module.vpc.aws_network_acl.outpost",
            "module.network.module.vpc.aws_network_acl.private",
            "module.network.module.vpc.aws_network_acl.public",
            "module.network.module.vpc.aws_network_acl.redshift",
            "module.network.module.vpc.aws_network_acl_rule.database_inbound",
            "module.network.module.vpc.aws_network_acl_rule.database_outbound",
            "module.network.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.network.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.network.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.network.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.network.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.network.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.network.module.vpc.aws_network_acl_rule.private_inbound",
            "module.network.module.vpc.aws_network_acl_rule.private_outbound",
            "module.network.module.vpc.aws_network_acl_rule.public_inbound",
            "module.network.module.vpc.aws_network_acl_rule.public_outbound",
            "module.network.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.network.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.network.module.vpc.aws_redshift_subnet_group.redshift",
            "module.network.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.network.module.vpc.aws_route.database_internet_gateway",
            "module.network.module.vpc.aws_route.database_ipv6_egress",
            "module.network.module.vpc.aws_route.database_nat_gateway",
            "module.network.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.network.module.vpc.aws_route.private_ipv6_egress",
            "module.network.module.vpc.aws_route.private_nat_gateway",
            "module.network.module.vpc.aws_route.public_internet_gateway",
            "module.network.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.network.module.vpc.aws_route_table.database",
            "module.network.module.vpc.aws_route_table.elasticache",
            "module.network.module.vpc.aws_route_table.intra",
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_route_table.public",
            "module.network.module.vpc.aws_route_table.redshift",
            "module.network.module.vpc.aws_route_table_association.database",
            "module.network.module.vpc.aws_route_table_association.elasticache",
            "module.network.module.vpc.aws_route_table_association.intra",
            "module.network.module.vpc.aws_route_table_association.outpost",
            "module.network.module.vpc.aws_route_table_association.private",
            "module.network.module.vpc.aws_route_table_association.public",
            "module.network.module.vpc.aws_route_table_association.redshift",
            "module.network.module.vpc.aws_route_table_association.redshift_public",
            "module.network.module.vpc.aws_subnet.database",
            "module.network.module.vpc.aws_subnet.elasticache",
            "module.network.module.vpc.aws_subnet.intra",
            "module.network.module.vpc.aws_subnet.outpost",
            "module.network.module.vpc.aws_subnet.private",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_subnet.redshift",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_dhcp_options.this",
            "module.network.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.network.module.vpc.aws_vpn_gateway.this",
            "module.network.module.vpc.aws_vpn_gateway_attachment.this",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.network.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.network.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.security.aws_security_group.alb",
            "module.security.aws_security_group.bastion"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:767397681234:security-group/sg-0c120d53caaf8fe65",
            "description": "bastion network traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "all all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c120d53caaf8fe65",
            "ingress": [
              {
                "cidr_blocks": [
                  "123.20.239.118/32"
                ],
                "description": "22 from workstation",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion",
            "name_prefix": "",
            "owner_id": "767397681234",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow traffic"
            },
            "tags_all": {
              "Name": "allow traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e5ad762de4c9bdb8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.network.module.vpc.aws_customer_gateway.this",
            "module.network.module.vpc.aws_db_subnet_group.database",
            "module.network.module.vpc.aws_default_network_acl.this",
            "module.network.module.vpc.aws_default_route_table.default",
            "module.network.module.vpc.aws_default_security_group.this",
            "module.network.module.vpc.aws_default_vpc.this",
            "module.network.module.vpc.aws_egress_only_internet_gateway.this",
            "module.network.module.vpc.aws_eip.nat",
            "module.network.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.network.module.vpc.aws_flow_log.this",
            "module.network.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_nat_gateway.this",
            "module.network.module.vpc.aws_network_acl.database",
            "module.network.module.vpc.aws_network_acl.elasticache",
            "module.network.module.vpc.aws_network_acl.intra",
            "module.network.module.vpc.aws_network_acl.outpost",
            "module.network.module.vpc.aws_network_acl.private",
            "module.network.module.vpc.aws_network_acl.public",
            "module.network.module.vpc.aws_network_acl.redshift",
            "module.network.module.vpc.aws_network_acl_rule.database_inbound",
            "module.network.module.vpc.aws_network_acl_rule.database_outbound",
            "module.network.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.network.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.network.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.network.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.network.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.network.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.network.module.vpc.aws_network_acl_rule.private_inbound",
            "module.network.module.vpc.aws_network_acl_rule.private_outbound",
            "module.network.module.vpc.aws_network_acl_rule.public_inbound",
            "module.network.module.vpc.aws_network_acl_rule.public_outbound",
            "module.network.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.network.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.network.module.vpc.aws_redshift_subnet_group.redshift",
            "module.network.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.network.module.vpc.aws_route.database_internet_gateway",
            "module.network.module.vpc.aws_route.database_ipv6_egress",
            "module.network.module.vpc.aws_route.database_nat_gateway",
            "module.network.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.network.module.vpc.aws_route.private_ipv6_egress",
            "module.network.module.vpc.aws_route.private_nat_gateway",
            "module.network.module.vpc.aws_route.public_internet_gateway",
            "module.network.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.network.module.vpc.aws_route_table.database",
            "module.network.module.vpc.aws_route_table.elasticache",
            "module.network.module.vpc.aws_route_table.intra",
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_route_table.public",
            "module.network.module.vpc.aws_route_table.redshift",
            "module.network.module.vpc.aws_route_table_association.database",
            "module.network.module.vpc.aws_route_table_association.elasticache",
            "module.network.module.vpc.aws_route_table_association.intra",
            "module.network.module.vpc.aws_route_table_association.outpost",
            "module.network.module.vpc.aws_route_table_association.private",
            "module.network.module.vpc.aws_route_table_association.public",
            "module.network.module.vpc.aws_route_table_association.redshift",
            "module.network.module.vpc.aws_route_table_association.redshift_public",
            "module.network.module.vpc.aws_subnet.database",
            "module.network.module.vpc.aws_subnet.elasticache",
            "module.network.module.vpc.aws_subnet.intra",
            "module.network.module.vpc.aws_subnet.outpost",
            "module.network.module.vpc.aws_subnet.private",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_subnet.redshift",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_dhcp_options.this",
            "module.network.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.network.module.vpc.aws_vpn_gateway.this",
            "module.network.module.vpc.aws_vpn_gateway_attachment.this",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.network.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.network.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mongodb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:767397681234:security-group/sg-060fa40d987524664",
            "description": "mongodb network traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "all all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-060fa40d987524664",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "22 from bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c120d53caaf8fe65"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "27017 from application",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01f1297157465bb22"
                ],
                "self": false,
                "to_port": 27017
              }
            ],
            "name": "mongodb",
            "name_prefix": "",
            "owner_id": "767397681234",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "database allow traffic"
            },
            "tags_all": {
              "Name": "database allow traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e5ad762de4c9bdb8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.network.module.vpc.aws_customer_gateway.this",
            "module.network.module.vpc.aws_db_subnet_group.database",
            "module.network.module.vpc.aws_default_network_acl.this",
            "module.network.module.vpc.aws_default_route_table.default",
            "module.network.module.vpc.aws_default_security_group.this",
            "module.network.module.vpc.aws_default_vpc.this",
            "module.network.module.vpc.aws_egress_only_internet_gateway.this",
            "module.network.module.vpc.aws_eip.nat",
            "module.network.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.network.module.vpc.aws_flow_log.this",
            "module.network.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_nat_gateway.this",
            "module.network.module.vpc.aws_network_acl.database",
            "module.network.module.vpc.aws_network_acl.elasticache",
            "module.network.module.vpc.aws_network_acl.intra",
            "module.network.module.vpc.aws_network_acl.outpost",
            "module.network.module.vpc.aws_network_acl.private",
            "module.network.module.vpc.aws_network_acl.public",
            "module.network.module.vpc.aws_network_acl.redshift",
            "module.network.module.vpc.aws_network_acl_rule.database_inbound",
            "module.network.module.vpc.aws_network_acl_rule.database_outbound",
            "module.network.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.network.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.network.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.network.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.network.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.network.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.network.module.vpc.aws_network_acl_rule.private_inbound",
            "module.network.module.vpc.aws_network_acl_rule.private_outbound",
            "module.network.module.vpc.aws_network_acl_rule.public_inbound",
            "module.network.module.vpc.aws_network_acl_rule.public_outbound",
            "module.network.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.network.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.network.module.vpc.aws_redshift_subnet_group.redshift",
            "module.network.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.network.module.vpc.aws_route.database_internet_gateway",
            "module.network.module.vpc.aws_route.database_ipv6_egress",
            "module.network.module.vpc.aws_route.database_nat_gateway",
            "module.network.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.network.module.vpc.aws_route.private_ipv6_egress",
            "module.network.module.vpc.aws_route.private_nat_gateway",
            "module.network.module.vpc.aws_route.public_internet_gateway",
            "module.network.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.network.module.vpc.aws_route_table.database",
            "module.network.module.vpc.aws_route_table.elasticache",
            "module.network.module.vpc.aws_route_table.intra",
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_route_table.public",
            "module.network.module.vpc.aws_route_table.redshift",
            "module.network.module.vpc.aws_route_table_association.database",
            "module.network.module.vpc.aws_route_table_association.elasticache",
            "module.network.module.vpc.aws_route_table_association.intra",
            "module.network.module.vpc.aws_route_table_association.outpost",
            "module.network.module.vpc.aws_route_table_association.private",
            "module.network.module.vpc.aws_route_table_association.public",
            "module.network.module.vpc.aws_route_table_association.redshift",
            "module.network.module.vpc.aws_route_table_association.redshift_public",
            "module.network.module.vpc.aws_subnet.database",
            "module.network.module.vpc.aws_subnet.elasticache",
            "module.network.module.vpc.aws_subnet.intra",
            "module.network.module.vpc.aws_subnet.outpost",
            "module.network.module.vpc.aws_subnet.private",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_subnet.redshift",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_dhcp_options.this",
            "module.network.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.network.module.vpc.aws_vpn_gateway.this",
            "module.network.module.vpc.aws_vpn_gateway_attachment.this",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.network.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.network.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.security.aws_security_group.alb",
            "module.security.aws_security_group.application",
            "module.security.aws_security_group.bastion"
          ]
        }
      ]
    },
    {
      "module": "module.storage",
      "mode": "managed",
      "type": "aws_instance",
      "name": "mongo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fa377108253bf620",
            "arn": "arn:aws:ec2:ap-southeast-1:767397681234:instance/i-0c097cab8d375d6e2",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c097cab8d375d6e2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "udemy-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08cc7a3c92bb079e1",
            "private_dns": "ip-10-10-101-94.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.101.94",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:ap-southeast-1:767397681234:key/e9e86ccc-a45a-4931-a6aa-71b2ece9b9d6",
                "throughput": 0,
                "volume_id": "vol-0c1642a3b14b994ac",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06b4bf8cb5c1b0869",
            "tags": {
              "Name": "Mongo",
              "Owner": "Udemy"
            },
            "tags_all": {
              "Name": "Mongo",
              "Owner": "Udemy"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-060fa40d987524664"
            ]
          },
          "dependencies": [
            "aws_key_pair.udemy-keypair",
            "module.network.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.network.module.vpc.aws_customer_gateway.this",
            "module.network.module.vpc.aws_db_subnet_group.database",
            "module.network.module.vpc.aws_default_network_acl.this",
            "module.network.module.vpc.aws_default_route_table.default",
            "module.network.module.vpc.aws_default_security_group.this",
            "module.network.module.vpc.aws_default_vpc.this",
            "module.network.module.vpc.aws_egress_only_internet_gateway.this",
            "module.network.module.vpc.aws_eip.nat",
            "module.network.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.network.module.vpc.aws_flow_log.this",
            "module.network.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.network.module.vpc.aws_internet_gateway.this",
            "module.network.module.vpc.aws_nat_gateway.this",
            "module.network.module.vpc.aws_network_acl.database",
            "module.network.module.vpc.aws_network_acl.elasticache",
            "module.network.module.vpc.aws_network_acl.intra",
            "module.network.module.vpc.aws_network_acl.outpost",
            "module.network.module.vpc.aws_network_acl.private",
            "module.network.module.vpc.aws_network_acl.public",
            "module.network.module.vpc.aws_network_acl.redshift",
            "module.network.module.vpc.aws_network_acl_rule.database_inbound",
            "module.network.module.vpc.aws_network_acl_rule.database_outbound",
            "module.network.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.network.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.network.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.network.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.network.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.network.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.network.module.vpc.aws_network_acl_rule.private_inbound",
            "module.network.module.vpc.aws_network_acl_rule.private_outbound",
            "module.network.module.vpc.aws_network_acl_rule.public_inbound",
            "module.network.module.vpc.aws_network_acl_rule.public_outbound",
            "module.network.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.network.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.network.module.vpc.aws_redshift_subnet_group.redshift",
            "module.network.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.network.module.vpc.aws_route.database_internet_gateway",
            "module.network.module.vpc.aws_route.database_ipv6_egress",
            "module.network.module.vpc.aws_route.database_nat_gateway",
            "module.network.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.network.module.vpc.aws_route.private_ipv6_egress",
            "module.network.module.vpc.aws_route.private_nat_gateway",
            "module.network.module.vpc.aws_route.public_internet_gateway",
            "module.network.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.network.module.vpc.aws_route_table.database",
            "module.network.module.vpc.aws_route_table.elasticache",
            "module.network.module.vpc.aws_route_table.intra",
            "module.network.module.vpc.aws_route_table.private",
            "module.network.module.vpc.aws_route_table.public",
            "module.network.module.vpc.aws_route_table.redshift",
            "module.network.module.vpc.aws_route_table_association.database",
            "module.network.module.vpc.aws_route_table_association.elasticache",
            "module.network.module.vpc.aws_route_table_association.intra",
            "module.network.module.vpc.aws_route_table_association.outpost",
            "module.network.module.vpc.aws_route_table_association.private",
            "module.network.module.vpc.aws_route_table_association.public",
            "module.network.module.vpc.aws_route_table_association.redshift",
            "module.network.module.vpc.aws_route_table_association.redshift_public",
            "module.network.module.vpc.aws_subnet.database",
            "module.network.module.vpc.aws_subnet.elasticache",
            "module.network.module.vpc.aws_subnet.intra",
            "module.network.module.vpc.aws_subnet.outpost",
            "module.network.module.vpc.aws_subnet.private",
            "module.network.module.vpc.aws_subnet.public",
            "module.network.module.vpc.aws_subnet.redshift",
            "module.network.module.vpc.aws_vpc.this",
            "module.network.module.vpc.aws_vpc_dhcp_options.this",
            "module.network.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.network.module.vpc.aws_vpn_gateway.this",
            "module.network.module.vpc.aws_vpn_gateway_attachment.this",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.network.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.network.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.network.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.security.aws_security_group.alb",
            "module.security.aws_security_group.application",
            "module.security.aws_security_group.bastion",
            "module.security.aws_security_group.mongodb"
          ]
        }
      ]
    }
  ]
}